# queueing-system

./: .gitignore  Cargo.toml  README.md
src/: main.rs  qs_main.rs  qs_simulation.rs  qs_types.rs  queueing_system.rs
src/glade/: main.glade
src/interface/: build_ui.rs  detail.rs  mod.rs  plotting.rs  state_draw.rs
src/queueing-system/: main.rs  simulation.rs  types.rs
src/queueing_system/: analytics.rs  mod.rs  simulation.rs  statistics.rs  types.rs
