[package]
name = "queueing-system"
version = "0.1.0"
authors = ["vegtamr <barekov.am.v@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "0.9.1"
glib = "0.10.3"
gnuplot = "0.0.37"
gtk = "0.9.2"
itertools = "0.9.0"
plotters = { git = "https://github.com/38/plotters.git" }
rand = "0.7.3"